<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
      <ImageView
          android:id="@+id/profile_image"
          android:layout_width="176dp"
          android:layout_height="180dp"
          android:layout_margin="@dimen/padding_small"
          android:src="@drawable/wutt_hmone_shwe_yi"/>
      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="@dimen/padding_small">
        <android.support.v7.widget.CardView
            android:id="@+id/wiki_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foreground="?android:attr/selectableItemBackground">
          <TextView
              android:padding="@dimen/padding_normal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:text="Wikipedia"/>
        </android.support.v7.widget.CardView>
      </FrameLayout>
    </LinearLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="@dimen/padding_small"
          android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/biography"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:padding="@dimen/padding_small"
              android:gravity="right"
              android:textStyle="bold"
              android:text="@string/native_name_title"/>
          <TextView
              android:id="@+id/native_name"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:padding="@dimen/padding_small"
              android:gravity="left"
              android:text="@string/native_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:padding="@dimen/padding_small"
              android:gravity="right"
              android:textStyle="bold"
              android:text="@string/born_title"/>
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:padding="@dimen/padding_small"
              android:gravity="left"
              android:text="@string/born"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:padding="@dimen/padding_small"
              android:textStyle="bold"
              android:gravity="right"
              android:text="@string/height_title"/>
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:padding="@dimen/padding_small"
              android:gravity="left"
              android:text="@string/height"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:padding="@dimen/padding_small"
              android:gravity="right"
              android:textStyle="bold"
              android:text="@string/weight_title"/>
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:padding="@dimen/padding_small"
              android:gravity="left"
              android:text="@string/weight"/>
        </LinearLayout>
      </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/career_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="@dimen/padding_small"
          android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/career"/>
        <TextView
            android:id="@+id/career_webview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/career_content"
            android:lineSpacingMultiplier="1.5"
            android:gravity="left"/>

      </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/personal_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="@dimen/padding_small"
          android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/personal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/personal_content"
            android:lineSpacingMultiplier="1.5"
            android:gravity="left"/>

      </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/award_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="@dimen/padding_small"
          android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/awards"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/awards_content"
            android:lineSpacingMultiplier="1.5"
            android:gravity="left"/>

      </LinearLayout>
    </android.support.v7.widget.CardView>
  </LinearLayout>
</ScrollView>