<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:weightSum="5">
    <RelativeLayout
        android:id="@+id/title_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/start_background">
      <TextView
          android:id="@+id/title_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/title_text_size"
          android:layout_centerInParent="true"
          android:gravity="center"
          tools:text="Wut Hmone \nShwe Yi"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:orientation="vertical">
      <LinearLayout android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/padding_normal"
          android:layout_marginBottom="@dimen/padding_normal"
          android:weightSum="2">
        <android.support.v7.widget.CardView
            android:id="@+id/photo_card"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:foreground="?android:attr/selectableItemBackground"
            cardview:cardBackgroundColor="@color/blue_background">
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center">
            <ImageView
                android:id="@+id/photo_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/photo_icon"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/padding_small"/>
            <TextView
                android:id="@+id/photo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text_size"
                android:layout_below="@id/photo_image"
                android:layout_centerHorizontal="true"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:text="@string/photos"/>
          </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/bio_card"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:foreground="?android:attr/selectableItemBackground"
            cardview:cardBackgroundColor="@color/orange_background">
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center">
            <ImageView
                android:id="@+id/bio_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/biography"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/padding_small"/>
            <TextView
                android:id="@+id/bio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text_size"
                android:layout_below="@id/bio_image"
                android:layout_centerHorizontal="true"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:text="@string/biography"/>
          </RelativeLayout>
        </android.support.v7.widget.CardView>
      </LinearLayout>
      <LinearLayout android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:layout_marginTop="@dimen/padding_normal"
          android:weightSum="2">
        <android.support.v7.widget.CardView
            android:id="@+id/follow_card"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/padding_normal"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:foreground="?android:attr/selectableItemBackground"
            cardview:cardBackgroundColor="@color/pink_background">
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center">
            <ImageView
                android:id="@+id/follow_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/padding_small"/>
            <TextView
                android:id="@+id/follow_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text_size"
                android:layout_below="@id/follow_image"
                android:layout_centerHorizontal="true"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:text="@string/follow"/>
          </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/about_card"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/padding_normal"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:foreground="?android:attr/selectableItemBackground"
            cardview:cardBackgroundColor="@color/green_background">
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center">
            <ImageView
                android:id="@+id/about_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/about"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/padding_small"/>
            <TextView
                android:id="@+id/about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text_size"
                android:layout_below="@id/about_image"
                android:layout_centerHorizontal="true"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:text="@string/about"/>
          </RelativeLayout>
        </android.support.v7.widget.CardView>
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>
</ScrollView>